# nn-zero-to-hero-follow-along

./: README.md  main.py  pyproject.toml
data/: Makefile
docs/: notes.md
notebooks/: explore.ipynb  get-comfy-with-the-pipeline.ipynb  mlp.ipynb  smolgpt.ipynb  understanding-batchnorm.ipynb
notebooks-2/: copy-ref-behavour.ipynb
