[project]
name = "nn-zero-to-hero-follow-along"
version = "0.1.0"
description = "Follow along Andrej Karpathy's series"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
